# lmopt-rs

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  LICENSE  README.md  constraint_test.rs  constraints_test.rs  fix_peak.py  rust-toolchain.toml  uncertainty_standalone.rs
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: docs.yml
.states/: backlog.json  component_states.json  implementation_progress.json  test_coverage.json
benches/: comparison.rs  global_optimization.rs  lm_algorithm.rs  matrix_operations.rs
docs/: autodiff.md  comparison.md  getting_started.md
docs/concepts/: autodiff.md  global_optimization.md  lm_algorithm.md  models.md  parameters.md  uncertainty.md
docs/examples/: basic_fitting.md  composite_models.md  global_optimization.md
examples/: composite_models.rs  confidence_intervals.rs  global_optimization.rs  model_fitting.rs  monte_carlo.rs  parallel_global_optimization.rs  parallel_processing.rs  parameter_system.rs
plans/: AUTODIFF_IMPLEMENTATION.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS.md  LM_ALGORITHM_PLAN.md  PHASE1_DETAILED.md  PHASE2_DETAILED.md  TEST_PLAN.md  implementation_plan.md  phase1_plan.md
src/: error.rs  lib.rs  lm.rs  model.rs  problem.rs  problem_params.rs
src/global_opt/: basin_hopping.rs  differential_evolution.rs  hybrid.rs  mod.rs  parallel.rs  (+2 more)
standalone_test/: Cargo.toml
tests/: composite_models_tests.rs  constrained_optimization_tests.rs  global_optimization_tests.rs  lib.rs  lm_algorithm.rs  lm_optimization.rs  matrix_conversion.rs  matrix_operations.rs  matrix_properties.rs  parameter_problem_integration.rs  problem_trait.rs  uncertainty_propagation_test.rs
uncertainty_standalone_test/: Cargo.toml  mod.rs
(+48 files in other folders)
